<resources>
    <string name="app_name">Validation</string>
    <string name="username_required">Username *</string>
    <string name="phone_number_required">Phone Number *</string>
    <string name="password_required">Password *</string>
    <string name="confirm_password_required">Confirm Password *</string>
    <string name="submit">Submit</string>
    <string name="email_required">Email *</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="gender">Gender *</string>
    <string name="hobby">Hobby *</string>
    <string name="sports">Sports</string>
    <string name="reading">Reading</string>
    <string name="coding">Coding</string>
</resources>